--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: test_db
-          MYSQL_USER: root
+          MYSQL_USER: regular
           MYSQL_PASSWORD: password
         ports:
           - 3306:3306
