--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: test_db
-          MYSQL_USER: regular
+          MYSQL_USER: root
           MYSQL_PASSWORD: password
         ports:
           - 3306:3306
@@ -57,12 +57,6 @@ jobs:
       - name: Run tests
         run: |
           python manage.py test
-        env:
-          DATABASE_HOST: mysql
-          DATABASE_PORT: 3306
-          DATABASE_USER: regular
-          DATABASE_PASSWORD: password
-          DATABASE_NAME: test_db
 
       # Step 5: Build Docker image
       - name: Build Docker image
