--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: 3.9
 
-      # Step 3: Install dependencies
+      # Step 3: Upgrade pip and install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
