--- a/bobo-v2/apps/web/package.json
+++ b/bobo-v2/apps/web/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/postcss": "^4.1.18",
     "next": "16.1.0",
+    "openai": "^6.16.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
