--- a/bobo-v2/apps/web/package.json
+++ b/bobo-v2/apps/web/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "jspdf": "^4.0.0",
     "next": "16.1.0",
     "openai": "^6.16.0",
     "postcss": "^8.5.6",
